2008-06-27 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * interopServerProvider.c 
    Fixed [ 1945374 ] CIM_ObjectManagerCommunicationMechanism.Version not set
        (2nd fix to set proper version)

2008-06-25 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* fileRepository.c:
	Fixed [ 2001879 ] sfcb string compares for qualifier name are case-sensitive

	* support.c:
	Fixed [ 1998030 ] SFCB core dumps during garbage collection
	(thanks to Nick Bofferding for helping to track this down)
	
2008-06-24 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* context.c:
	Fixed [ 1999175 ] CMAddContextEntry doesn't update entries, only adds

2008-06-16 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* support.c:
	Fixed [ 1914077 ] MI function signatures missing CMPIStatus * parameter
	(Patch by Tim Potter)

2008-06-13 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c:
	Fixed [ 1993385 ] sfcb restarts itself on startup

2008-06-13 Sean Swehla <smswehla@linux.vnet.ibm.com>

    * indCIMXMLExport.c
    Fixed [ 1934753 ] indCIMXMLExport.c fails to compile on gcc 4.3

2008-06-11 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* qualifierProvider.c:
	Expanded previous fix to 1983569 to included similar problem in gq

	* httpAdapter.c:
	Fixed [ 1991296 ] httpAdapter doesn't check content_length correctly
	(found by Alexander Sotirov)
	
2008-06-10 Sean Swehla <smswehla@linux.vnet.ibm.com>

    * qualifierProvider.c
    Fixed [ 1983569 ] enumerate qualifier call causes qualifier provider to die
    (Patch by Sven Scheutz)

2008-06-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * interopServerProvider.c 
    Fixed [ 1945374 ] CIM_ObjectManagerCommunicationMechanism.Version not set

2008-05-30 Sean Swehla <smswehla@linux.vnet.ibm.com>

    * cimXmlOps.y
    Fixed [ 1923373 ] SFCB GetClass defaults optional IncludeQualifiers=false
    (Based on patch from Mike Lisanke)

2008-05-30 Sean Swehla <smswehla@linux.vnet.ibm.com>

    * support.c