@@ -541,7 +541,7 @@ int main(int argc, char *argv[])
    int c, i;
    long tmask = 0, sslMode=0,sslOMode=0, tracelevel=0;
    char * tracefile = NULL;
-   int enableHttp=0,enableHttps=0,useChunking=0,doBa=0,enableInterOp=0,httpLocalOnly=0;
+   int enableUds=0,enableHttp=0,enableHttps=0,useChunking=0,doBa=0,enableInterOp=0,httpLocalOnly=0;
    long dSockets,sSockets,pSockets;
    char *pauseStr;
 
@@ -664,13 +664,16 @@ int main(int argc, char *argv[])
       
    if (getControlBool("enableHttp", &enableHttp))
       enableHttp=1;
+
+   if (getControlBool("enableUds", &enableUds))
+      enableUds=1;
       
 #if defined USE_SSL
    if (getControlBool("enableHttps", &enableHttps))
       enableHttps=0;
 
    sslMode=enableHttps;
-   sslOMode=sslMode & !enableHttp;
+   sslOMode=sslMode & !enableHttp & !enableUds;
 #else
    mlogf(M_INFO,M_SHOW,"--- SSL not configured\n");
    enableHttps=0;
