@@ -1,13 +1,15 @@
-# $Id: sfcb.cfg.pre.in,v 1.10 2007/02/22 16:04:27 mihajlov Exp $
+# $Id: sfcb.cfg.pre.in,v 1.11 2008/06/27 21:30:30 buccella Exp $
 # Sample Configuration for Small Footprint CIM Broker
 httpPort:       5988
 enableHttp:     @SFCB_CONF_HTTP@
+enableUds:      false
 httpProcs:      8
 httpsPort:      5989
 enableHttps:    @SFCB_CONF_HTTPS@
 httpsProcs:     8
 provProcs:      32
 doBasicAuth:    @SFCB_CONF_DOBASICAUTH@
+doUdsAuth:      true
 basicAuthLib:   @SFCB_CONF_BASICAUTHLIB@
 useChunking:    true
 keepaliveTimeout: 1
